--- a/src/App.css
+++ b/src/App.css
@@ -1,19 +1,6 @@
+
 .App {
   text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
   background-color: #282c34;
   min-height: 100vh;
   display: flex;
@@ -24,15 +11,55 @@
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+
+
+/*Name design*/
+
+.nameField{
+  font-size: 16px;
+  font-size: max(16px, 1em);
+  
+  padding: 0.25em 0.5em;
+  background-color: #fff;
+  border: none;
+  border-radius: 0.4rem;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.nameBtn{
+  display: block;
+  margin: auto;
+  margin-top: 2rem;
+  width: 10rem;
+  height: 3rem;
+  border: none;
+  border-radius: 0.4rem;
+  background-color: aquamarine;
+  font-size: 1rem;
+}
+
+.optionBtn{
+  display: block;
+  margin: auto;
+  margin-top: 2rem;
+  width: 100%;
+  height: 3rem;
+  border: none;
+  border-radius: 0.4rem;
+  background-color: aquamarine;
+  font-size: 1rem;
+}
+
+.ticketCard{
+  width: 100%;
+  margin:auto;
+  padding: 2rem;
+  border-radius: 0.4rem;
+  background-color: white;
+  color: black;
+}
+
+
+.summaryList{
+  text-align: left;
+  font-size: 1rem;
 }
